Séance 2 : Queue à capacité infinie ou bornée, compteur de rejets et taux de rejet